// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.Multiple render not display maxTagPlaceholder if maxTagCount not reach 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="rc-select-selection-placeholder"
    />
  </div>
</div>
`;

exports[`Select.Multiple render truncates tags by maxTagCount and show maxTagPlaceholder 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            One
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            Two
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-rest"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            <span>
              Omitted
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Multiple render truncates tags by maxTagCount and show maxTagPlaceholder function 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            One
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            Two
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-rest"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            <span>
              1 values omitted
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Multiple render truncates values by maxTagTextLength 1`] = `
<div
  class="rc-select rc-select-multiple rc-select-show-search"
>
  <div
    class="rc-select-selector"
  >
    <div
      class="rc-select-selection-overflow"
    >
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            On...
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="rc-select-selection-item"
        >
          <span
            class="rc-select-selection-item-content"
          >
            Tw...
          </span>
          <span
            aria-hidden="true"
            class="rc-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-selection-item-remove-icon"
            >
              ×
            </span>
          </span>
        </span>
      </div>
      <div
        class="rc-select-selection-overflow-item rc-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="rc-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="rc-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="rc-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
